--- a/build.gradle
+++ b/build.gradle
@@ -77,3 +77,15 @@ task qa {
             ':libsignal-service:test',
             ':Signal-Android:assemblePlayProdDebug'
 }
+
+plugins {
+  id "org.sonarqube" version "3.1.1"
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "an-so_Signal-Android"
+    property "sonar.organization", "an-so"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
