--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,6 +26,12 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew qa
+      
+    - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew build sonarqube
 
     - name: Archive reports for failed build
       if: ${{ failure() }}
