--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       uses: gradle/wrapper-validation-action@v1
 
     - name: Build and analyze
-      run: ./gradlew build qa sonarqube
+      run: ./gradlew sonarqube --debug
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
